added delete user form

--- a/ExitExamApp/ExitExamApp/ExitExamApp.csproj
+++ b/ExitExamApp/ExitExamApp/ExitExamApp.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Forms\AddUserForm.Designer.cs">
       <DependentUpon>AddUserForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\DeleteUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DeleteUserForm.Designer.cs">
+      <DependentUpon>DeleteUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logic\Constants.cs" />
     <Compile Include="Logic\DatabaseManager.cs" />
     <Compile Include="Forms\ExamMenuForm.cs">
@@ -107,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ExamMenuForm.resx">
       <DependentUpon>ExamMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DeleteUserForm.resx">
+      <DependentUpon>DeleteUserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
